# TOPIK-MYANMAR

./: .gitignore  MIGRATION.md  README.md  build-bo.py  build.py  docker-compose.pgvector.yml  docker-compose.prod.yml
api/: .env.example  Dockerfile  README.md  로컬실행_가이드.md
apps/api/: .env.example  README.md  alembic.ini  docker-compose.minio.yml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260606_0001_initial_schema.py
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/app/lib/: __init__.py  access_log.py  admin_permissions.py  audit.py  board_helpers.py  consents.py  deps.py  email_notify.py  email_render.py  email_templates.py  email_templates_i18n.py  email_worker.py  env_validate.py  errors.py  exam_round_status.py  fo_messages.py  formatting.py  google_auth.py  locale.py  mail.py  profile.py  profile_ko_labels.py  rev.py  roster_export.py  security.py  semantic_search.py  storage.py  translate.py  validation.py
apps/api/app/models/: __init__.py  access_log.py  admin.py  application.py  auth_tokens.py  base.py  board.py  content.py  exam.py  semantic.py  system.py  user.py
apps/api/app/routers/: admin_api.py  applications.py  auth.py  board.py  content.py  exam.py  files.py  health.py  me.py
docs/: DEPLOY.md  DEV_SPEC.md  IWINV_SETUP.md  PROJECT_REVIEW.md  RELEASE_NOTES_2026-06-11.md  고객사_DNS_요청_템플릿.md  약관_관리자입력용.md
scripts/: _audit_parse_xlsx.py  clear_terms.py  create_admin.py  deploy-all-from-git.sh  deploy-bo-fix-to-live.sh  deploy-c안-live.sh  deploy-iwinv.sh  deploy-live.sh  (+25 more)
(+309 files in other folders)
